--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -22,7 +22,3 @@ img, picture, svg, video{
     display: block;
     max-width: 100%;
 }
-
-body{
-    min-height: 100vh;
-}
